Fixed widescreen align

--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,6 @@
     min-height: 100%;
 
     justify-content: center;
-    flex-wrap: wrap;
 }
 
 .bold {
